# OcrAnalysis2

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BOUNDS_MODE_FEATURE.md  CLAUDE.md  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  OcrAnalysis.sln  OcrAnalysisLib.vcxproj  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  complete_stripBleedMarks.cpp  debugcheck_output.txt  deploy_lvs_runtime.vcxproj  deploy_lvs_runtime.vcxproj.filters  new_stripBleedMarks.cpp  ocr_analysis.vcxproj  ocr_analysis.vcxproj.filters  ocr_demo.vcxproj  ocr_demo.vcxproj.filters  pdfcheck.vcxproj  pdfcheck.vcxproj.filters  simplified_stripBleedMarks.cpp  test_bounds_modes.vcxproj  test_bounds_modes.vcxproj.filters  test_check_image.vcxproj  test_check_image.vcxproj.filters  test_cleanup_image.vcxproj  test_cleanup_image.vcxproj.filters  test_crop_label.vcxproj  test_crop_label.vcxproj.filters  test_find_images.vcxproj  test_find_images.vcxproj.filters  test_identify_regions.vcxproj  test_identify_regions.vcxproj.filters  test_ocr.vcxproj  test_ocr.vcxproj.filters  test_orientation.vcxproj  (+21 more)
include/: OCRAnalysis.hpp
src/: OCRAnalysis.cpp  OcrAnalysis.code-workspace  create_relative_map.cpp  main.cpp  pdfcheck.cpp  render_elements_png.cpp  render_pdf.cpp  test_bounds_modes.cpp  test_check_image.cpp  test_cleanup_image.cpp  test_crop_label.cpp  test_find_images.cpp  test_identify_regions.cpp  test_ocr.cpp  test_orientation.cpp  test_pdf.cpp  test_pdf_elements.cpp  test_pdf_embedded.cpp  test_pdf_graphics.cpp  test_pdf_lines.cpp  test_pdf_rectangles.cpp  test_pdf_simple.cpp  test_png_render.cpp  test_render_info.cpp  test_sort_elements.cpp  test_strip_bleed_marks.cpp
